@@ -1,0 +1,107 @@
+.TH PIX-PPM 1 BRL-CAD
+.\"                      P I X - P P M . 1
+.\" BRL-CAD
+.\"
+.\" Copyright (c) 2005-2009 United States Government as represented by
+.\" the U.S. Army Research Laboratory.
+.\"
+.\" Redistribution and use in source (Docbook format) and 'compiled'
+.\" forms (PDF, PostScript, HTML, RTF, etc), with or without
+.\" modification, are permitted provided that the following conditions
+.\" are met:
+.\"
+.\" 1. Redistributions of source code (Docbook format) must retain the
+.\" above copyright notice, this list of conditions and the following
+.\" disclaimer.
+.\"
+.\" 2. Redistributions in compiled form (transformed to other DTDs,
+.\" converted to PDF, PostScript, HTML, RTF, and other formats) must
+.\" reproduce the above copyright notice, this list of conditions and
+.\" the following disclaimer in the documentation and/or other
+.\" materials provided with the distribution.
+.\"
+.\" 3. The name of the author may not be used to endorse or promote
+.\" products derived from this documentation without specific prior
+.\" written permission.
+.\"
+.\" THIS DOCUMENTATION IS PROVIDED BY THE AUTHOR AS IS'' AND ANY
+.\" EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
+.\" IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
+.\" PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR
+.\" ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
+.\" CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT
+.\" OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR
+.\" BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
+.\" LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
+.\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
+.\" USE OF THIS DOCUMENTATION, EVEN IF ADVISED OF THE POSSIBILITY OF
+.\" SUCH DAMAGE.
+.\"
+.\".\".\"
+.SH NAME
+pix-ppm	\- convert a BRL-CAD PIX or BW format image to a PPM format image
+.SH SYNOPSIS
+.B pix-ppm
+.RB [ \-a ]
+.RB [ \-s squaresize ]
+.RB [ \-w file_width ]
+.RB [ \-n file_height ]
+.RB [ \-# bytes_per_pixel ]
+.RB [ \-o PPM_file ]
+ [PIX_file]
+.RB [ > PPM_file ]
+.SH DESCRIPTION
+.I pix-ppm
+converts a
+.I BRL PIX(5)
+format file to a
+.I PPM
+(Portable PixMap) format file on the standard output. The PPM file
+created will be either an RGB file with 3 bytes per pixel (default) or
+a B&W file with 1 byte per pixel
+.LP
+PIX image files do not contain information about their size.  The size
+of the input PIX image file must be specified if the dimensions are
+not the default 512x512 size.
+.SH OPTIONS
+.TP
+.B \-a
+autosize the input file to determine file image height and width
+.TP
+.B \-s squaresize
+sets both the width and the height for the input to be
+.I squaresize
+.TP
+.B \-w file_width
+tells
+.I pix-ppm
+that the input is
+.I file_width
+pixels wide
+.TP
+.B \-n file_height
+tells
+.I pix-ppm
+that the input is
+.I file_height
+scanlines tall
+.TP
+.B \-# bytes_per_pixel
+tells
+.I pix-ppm
+how many bytes there are per pixel in the input PIX or BW file.
+.TP
+.B \-o PPM_file
+tells
+.I pix-ppm
+to write image data to the specified
+.I PPM_file
+output file.  The
+.I pix-ppm
+command will not write out binary image data directly to a terminal
+device as a safeguard.
+.SH "SEE ALSO"
+brlcad(1), pix-png(1), pix-bw(1), bw-pix(1), pix-fb(1), pix(5), bw(5).
+.SH "BUG REPORTS"
+Reports of bugs or problems should be submitted via electronic
+mail to <devs@brlcad.org>.
