@@ -23,7 +23,7 @@ REM REM REM
 SETLOCAL
 
 REM XXX FIXME: SHOULD NOT NEED TO SET BRLCAD_DATA OR CAD_VERSION XXX
-SET CAD_VERSION=7.16.1
+SET CAD_VERSION=7.16.2
 
 SET SAVE_CD=%CD%
 SET PATH=%~dp0
